manifests/argo/netpol-events-controller.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: events-controller
  namespace: argo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argo-events-controller-manager
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            eventbus-name: default
      toPorts:
        - ports:
            - port: "8222"
              protocol: TCP
